Fix white space, add in fonts, logo, colours

--- a/common/theme.css
+++ b/common/theme.css
@@ -1,7 +1,7 @@
 :root {
-  --color-accent-blackrose:#54284C ;
-  --color-accent-hippyblue:#5199A8 ;
-  --color-accent-trendypink:#8C6184;
+  --color-accent-blackrose: #54284c;
+  --color-accent-hippyblue: #5199a8;
+  --color-accent-trendypink: #8c6184;
   --font-primary: "Open Sans", sans-serif;
   --font-secondary: "Seaweed Script", serif;
 }
